# nonlinear-tomography

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: a_define_physics.py  b_make_test_data.py  c_perform_reconstruction.py
examples/resources/: loader.py
src/nonlinear_tomography/: core.py
